--- a/static/components/Home.templ
+++ b/static/components/Home.templ
@@ -33,9 +33,9 @@ templ Home(){
 
         // Lorem
 <div class="flex flex-col items-center justify-center h-[213px] mb-8 md:flex-row">
-    <p class="text-9xl font-bold text-center md:text-4xl">STOCKS</p>
-    <p class="text-6xl font-bold text-center md:text-2xl">BUY BETTER</p>
-    <p class="text-3xl font-bold text-center md:text-xl">BUY SMARTER</p>
+    <p class="text-8xl font-bold text-center ">STOCKS</p>
+    <p class="text-6xl font-bold text-center ">BUY BETTER</p>
+    <p class="text-3xl font-bold text-center ">BUY SMARTER</p>
 </div>
 
 
