--- a/static/components/Market.templ
+++ b/static/components/Market.templ
@@ -47,6 +47,9 @@ templ Market(s []string){
 
 </div>
 
+<div id="#chart">
+
+</div>
         <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
 
 
