--- a/static/components/Sidebar.templ
+++ b/static/components/Sidebar.templ
@@ -11,9 +11,19 @@ templ Sidebar(){
     <script src="https://unpkg.com/htmx.org@2.0.2" integrity="sha384-Y7hw+L/jvKeWIRRkqWYfPcvVxHzVzn5REgzbawhxAuQGwX1XWe70vji+VSeHOThJ" crossorigin="anonymous"></script>
 
        <script>
-           htmx.onLoad(function(content) {
-               initFlowbite();
-           })
+     htmx.onLoad(function(content) {
+         if (typeof echarts === 'undefined') {
+             var script = document.createElement('script');
+             script.src = "https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js";
+             document.head.appendChild(script);
+             script.onload = function() {
+                 initFlowbite();
+             };
+         } else {
+             initFlowbite();
+         }
+     });
+
        </script>
     </head>
 
@@ -56,7 +66,7 @@ templ Sidebar(){
             </a>
          </li>
          <li>
-            <a href="#" hx-get="/history" hx-target="#space" hx-trigger="click" hx-swap="innerHTML" class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
+            <a href="#" hx-get="/history" hx-target="#space" hx-trigger="click"  class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
                <svg class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 18">
                   <path d="M14 2a3.963 3.963 0 0 0-1.4.267 6.439 6.439 0 0 1-1.331 6.638A4 4 0 1 0 14 2Zm1 9h-1.264A6.957 6.957 0 0 1 15 15v2a2.97 2.97 0 0 1-.184 1H19a1 1 0 0 0 1-1v-1a5.006 5.006 0 0 0-5-5ZM6.5 9a4.5 4.5 0 1 0 0-9 4.5 4.5 0 0 0 0 9ZM8 10H5a5.006 5.006 0 0 0-5 5v2a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1v-2a5.006 5.006 0 0 0-5-5Z"/>
                </svg>
