--- a/static/components/Alert.templ
+++ b/static/components/Alert.templ
@@ -1,8 +1,13 @@
 package components
 
 templ Alert(m map[string]bool){
-
+    <script>
+        htmx.onLoad(function(content) {
+            initFlowbite();
+        });
+    </script>
 <div>
+
 
     if m["Oh, you do not have enough money to do this"]{
         <div class="flex items-center p-4 text-sm text-gray-800 border border-gray-300 rounded-lg bg-gray-50 dark:bg-gray-800 dark:text-gray-300 dark:border-gray-600" role="alert">
