change in alerts

--- a/static/components/LoggedOut.templ
+++ b/static/components/LoggedOut.templ
@@ -1,7 +1,11 @@
 package components
 
 templ LoggedOut(){
-
+    <script>
+        htmx.onLoad(function(content) {
+            initFlowbite();
+        });
+    </script>
 <div>
 
 
