--- a/static/components/LoggedOut.templ
+++ b/static/components/LoggedOut.templ
@@ -1,11 +1,15 @@
 package components
 
 templ LoggedOut(){
+<html>
+<head>
     <script>
         htmx.onLoad(function(content) {
             initFlowbite();
         });
     </script>
+</head>
+
 <div>
 
 
@@ -20,5 +24,6 @@ templ LoggedOut(){
 </div>
 
 </div>
+</html>
 
 }
