change in alerts

--- a/static/components/LoggedOut.templ
+++ b/static/components/LoggedOut.templ
@@ -3,6 +3,8 @@ package components
 templ LoggedOut(){
 <html>
 <head>
+        <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css" rel="stylesheet" />
+
     <script>
         htmx.onLoad(function(content) {
             initFlowbite();
@@ -24,6 +26,8 @@ templ LoggedOut(){
 </div>
 
 </div>
+        <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
+
 </html>
 
 }
